gen/grammar/DelphiParser.java
// Generated from /home/tr446/Code/grad/COP5556/PLP_PROJECT_P1/grammar/Delphi.g4 by ANTLR 4.13.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, AND=2, ARRAY=3, BEGIN=4, BOOLEAN=5, BREAK=6, CASE=7, CHAR=8, 
		CHR=9, CONST=10, CONSTRUCTOR=11, CONTINUE=12, CLASS=13, DESTRUCTOR=14, 
		DIV=15, DO=16, DOWNTO=17, ELSE=18, END=19, FILE=20, FOR=21, FUNCTION=22, 
		GOTO=23, IF=24, IN=25, INTEGER=26, LABEL=27, MOD=28, NIL=29, NOT=30, OF=31, 
		OR=32, PACKED=33, PROCEDURE=34, PROGRAM=35, PRIVATE=36, PROTECTED=37, 
		PUBLIC=38, PUBLISHED=39, REAL=40, RECORD=41, REPEAT=42, SEALED=43, SET=44, 
		THEN=45, TO=46, TYPE=47, UNTIL=48, VAR=49, WHILE=50, WITH=51, PLUS=52, 
		MINUS=53, STAR=54, SLASH=55, ASSIGN=56, COMMA=57, SEMI=58, COLON=59, EQUAL=60, 
		NOT_EQUAL=61, LT=62, LE=63, GE=64, GT=65, LPAREN=66, RPAREN=67, LBRACK=68, 
		LBRACK2=69, RBRACK=70, RBRACK2=71, POINTER=72, AT=73, DOT=74, DOTDOT=75, 
		LCURLY=76, RCURLY=77, UNIT=78, INTERFACE=79, USES=80, STRING=81, IMPLEMENTATION=82, 
		TRUE=83, FALSE=84, WS=85, COMMENT_1=86, COMMENT_2=87, IDENT=88, STRING_LITERAL=89, 
		NUM_INT=90, NUM_REAL=91;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_topLevelBlock = 3, 
		RULE_expandedTypeDefinitionPart = 4, RULE_expandedTypeDefinition = 5, 
		RULE_classType = 6, RULE_interfaces = 7, RULE_classDefinition = 8, RULE_primaryFieldDeclarationPart = 9, 
		RULE_memberListPart = 10, RULE_accessSpecifier = 11, RULE_methodPrototype = 12, 
		RULE_procedurePrototype = 13, RULE_constructorPrototype = 14, RULE_destructorPrototype = 15, 
		RULE_functionPrototype = 16, RULE_classFieldDeclarationPart = 17, RULE_interfaceType = 18, 
		RULE_interfaceGuid = 19, RULE_usesUnitsPart = 20, RULE_labelDeclarationPart = 21, 
		RULE_label = 22, RULE_constantDefinitionPart = 23, RULE_constantDefinition = 24, 
		RULE_constantChr = 25, RULE_constant = 26, RULE_unsignedNumber = 27, RULE_unsignedInteger = 28, 
		RULE_unsignedReal = 29, RULE_sign = 30, RULE_bool_ = 31, RULE_string = 32, 
		RULE_typeDefinitionPart = 33, RULE_typeDefinition = 34, RULE_functionType = 35, 
		RULE_procedureType = 36, RULE_type_ = 37, RULE_simpleType = 38, RULE_scalarType = 39, 
		RULE_subrangeType = 40, RULE_typeIdentifier = 41, RULE_structuredType = 42, 
		RULE_unpackedStructuredType = 43, RULE_stringtype = 44, RULE_arrayType = 45, 
		RULE_typeList = 46, RULE_indexType = 47, RULE_componentType = 48, RULE_recordType = 49, 
		RULE_fieldList = 50, RULE_fixedPart = 51, RULE_recordSection = 52, RULE_variantPart = 53, 
		RULE_tag = 54, RULE_variant = 55, RULE_setType = 56, RULE_baseType = 57, 
		RULE_fileType = 58, RULE_pointerType = 59, RULE_variableDeclarationPart = 60, 
		RULE_variableDeclaration = 61, RULE_procedureAndFunctionDeclarationPart = 62, 
		RULE_procedureOrFunctionDeclaration = 63, RULE_block = 64, RULE_procedureDeclaration = 65, 
		RULE_methodProcedureDeclaration = 66, RULE_methodFunctionDeclaration = 67, 
		RULE_constructorDeclaration = 68, RULE_destructorDeclaration = 69, RULE_formalParameterList = 70, 
		RULE_formalParameterSection = 71, RULE_parameterGroup = 72, RULE_identifierList = 73, 
		RULE_constList = 74, RULE_functionDeclaration = 75, RULE_resultType = 76, 
		RULE_statement = 77, RULE_unlabelledStatement = 78, RULE_simpleStatement = 79, 
		RULE_assignmentStatement = 80, RULE_controlStatement = 81, RULE_variable = 82, 
		RULE_expression = 83, RULE_relationaloperator = 84, RULE_simpleExpression = 85, 
		RULE_additiveoperator = 86, RULE_term = 87, RULE_multiplicativeoperator = 88, 
		RULE_signedFactor = 89, RULE_factor = 90, RULE_unsignedConstant = 91, 
		RULE_functionDesignator = 92, RULE_parameterList = 93, RULE_set_ = 94, 
		RULE_elementList = 95, RULE_element = 96, RULE_procedureStatement = 97, 
		RULE_actualParameter = 98, RULE_parameterwidth = 99, RULE_gotoStatement = 100, 
		RULE_emptyStatement_ = 101, RULE_empty_ = 102, RULE_structuredStatement = 103, 
		RULE_compoundStatement = 104, RULE_statements = 105, RULE_conditionalStatement = 106, 
		RULE_ifStatement = 107, RULE_caseStatement = 108, RULE_caseListElement = 109, 
		RULE_repetetiveStatement = 110, RULE_whileStatement = 111, RULE_repeatStatement = 112, 
		RULE_forStatement = 113, RULE_forList = 114, RULE_initialValue = 115, 
		RULE_finalValue = 116, RULE_withStatement = 117, RULE_recordVariableList = 118, 
		RULE_methodCall = 119;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "topLevelBlock", "expandedTypeDefinitionPart", 
			"expandedTypeDefinition", "classType", "interfaces", "classDefinition", 
			"primaryFieldDeclarationPart", "memberListPart", "accessSpecifier", "methodPrototype", 
			"procedurePrototype", "constructorPrototype", "destructorPrototype", 
			"functionPrototype", "classFieldDeclarationPart", "interfaceType", "interfaceGuid", 
			"usesUnitsPart", "labelDeclarationPart", "label", "constantDefinitionPart", 
			"constantDefinition", "constantChr", "constant", "unsignedNumber", "unsignedInteger", 
			"unsignedReal", "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
			"functionType", "procedureType", "type_", "simpleType", "scalarType", 
			"subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
			"stringtype", "arrayType", "typeList", "indexType", "componentType", 
			"recordType", "fieldList", "fixedPart", "recordSection", "variantPart", 
			"tag", "variant", "setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"block", "procedureDeclaration", "methodProcedureDeclaration", "methodFunctionDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "identifierList", "constList", 
			"functionDeclaration", "resultType", "statement", "unlabelledStatement", 
			"simpleStatement", "assignmentStatement", "controlStatement", "variable", 
			"expression", "relationaloperator", "simpleExpression", "additiveoperator", 
			"term", "multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
			"functionDesignator", "parameterList", "set_", "elementList", "element", 
			"procedureStatement", "actualParameter", "parameterwidth", "gotoStatement", 
			"emptyStatement_", "empty_", "structuredStatement", "compoundStatement", 
			"statements", "conditionalStatement", "ifStatement", "caseStatement", 
			"caseListElement", "repetetiveStatement", "whileStatement", "repeatStatement", 
			"forStatement", "forList", "initialValue", "finalValue", "withStatement", 
			"recordVariableList", "methodCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ABSTRACT'", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'BREAK'", 
			"'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'CONSTRUCTOR'", "'CONTINUE'", 
			"'CLASS'", "'DESTRUCTOR'", "'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", 
			"'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", "'IF'", "'IN'", "'INTEGER'", 
			"'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", 
			"'PROGRAM'", "'PRIVATE'", "'PROTECTED'", "'PUBLIC'", "'PUBLISHED'", "'REAL'", 
			"'RECORD'", "'REPEAT'", "'SEALED'", "'SET'", "'THEN'", "'TO'", "'TYPE'", 
			"'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", 
			"':='", "','", "';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", 
			"'('", "')'", "'['", "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", 
			"'{'", "'}'", "'UNIT'", "'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", 
			"'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "AND", "ARRAY", "BEGIN", "BOOLEAN", "BREAK", "CASE", 
			"CHAR", "CHR", "CONST", "CONSTRUCTOR", "CONTINUE", "CLASS", "DESTRUCTOR", 
			"DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", 
			"IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", 
			"PROCEDURE", "PROGRAM", "PRIVATE", "PROTECTED", "PUBLIC", "PUBLISHED", 
			"REAL", "RECORD", "REPEAT", "SEALED", "SET", "THEN", "TO", "TYPE", "UNTIL", 
			"VAR", "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", 
			"SEMI", "COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", 
			"RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", 
			"DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", "USES", "STRING", 
			"IMPLEMENTATION", "TRUE", "FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", 
			"STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public TopLevelBlockContext topLevelBlock() {
			return getRuleContext(TopLevelBlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(DelphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(DelphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240);
			programHeading();
			setState(242);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(241);
				match(INTERFACE);
				}
			}

			setState(244);
			topLevelBlock();
			setState(245);
			match(DOT);
			setState(246);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(DelphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(262);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(248);
				match(PROGRAM);
				setState(249);
				identifier();
				setState(254);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(250);
					match(LPAREN);
					setState(251);
					identifierList();
					setState(252);
					match(RPAREN);
					}
				}

				setState(256);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(258);
				match(UNIT);
				setState(259);
				identifier();
				setState(260);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DelphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(264);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
